# progenitor-cli-example

./: Cargo.toml  README.md  build.rs  cli-gen.json.txt  test.json
src/: cli.rs  example_builder.rs  example_httpmock.rs  main.rs
