[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
tokio = { version = "1.0", features = ["full"] }


[build-dependencies]
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
prettyplease = "0.2.22"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
syn = "2.0"
